# amr_robot

./: README.md
src/amr_description/: CMakeLists.txt  package.xml
src/amr_description/config/: controllers.yaml  diff_drive.yaml
src/amr_description/launch/: spawn_robot.launch.py
src/amr_description/urdf/: amr_robot.sdf  amr_robot.urdf  amr_robot.urdf.xacro
src/amr_description/worlds/: my_worlds.sdf
